--- a/src/D2DropCalc/D2DropCalc.fsproj
+++ b/src/D2DropCalc/D2DropCalc.fsproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Types.fs" />
+    <Compile Include="TreeTraversal.fs" />
     <Compile Include="Library.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
