--- a/src/D2DropCalc.Server/D2DropCalc.Server.fsproj
+++ b/src/D2DropCalc.Server/D2DropCalc.Server.fsproj
@@ -10,8 +10,10 @@
     <Content Include="appconfig.conf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Compile Include="Config.fs" /> 
-    <Compile Include="TreasureClasses.fs" /> 
+    <Compile Include="Config.fs" />
+    <Compile Include="FileLoading.fs" />
+    <Compile Include="TreasureClasses.fs" />
+    <Compile Include="handlers/ItemTreeHandler.fs" /> 
     <Compile Include="Init.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
@@ -19,6 +21,9 @@
     <None Include="web.config" CopyToOutputDirectory="PreserveNewest" />
     <None Include="paket.references" />
     <Content Include="WebRoot\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="scripts\**\*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
