--- a/src/D2DropCalc.SPA/src/App.fsproj
+++ b/src/D2DropCalc.SPA/src/App.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="components/CalcDrop.fs" />
     <Compile Include="components/Navbar.fs" />
     <Compile Include="components/DropCalcDropdowns.fs" />
+    <Compile Include="components/CalcDisplay.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <Import Project="..\..\..\.paket\Paket.Restore.targets" />
