WIP with avro and other ideas

--- a/src/D2DropCalc/D2DropCalc.fsproj
+++ b/src/D2DropCalc/D2DropCalc.fsproj
@@ -17,6 +17,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="TreeTraversal.fs" />
+    <Compile Include="Avro.fs" />
     <Compile Include="Library.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
